--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="bg-gray-500/30 w-full
   min-h-[100px] h-auto mt-8
   rounded-md p-2 text-slate-400">
-  <pre id="output">Output:</pre>
+  <pre id="output" class="whitespace-pre-wrap">Output:</pre>
 </div>
 
 </body>
